--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -11,7 +11,7 @@
     <p>Hi <%= @user.first_name %>,</p>
     <p>Congratulations!</p>
     <p>We really connected with your cover letter and think you are a great fit with our team of international journalists.
-      My name is Sewon, and I'm Editor in Chief at The Teen Magazine.</p>
+      My name is Mia, and I'm Editor in Chief at The Teen Magazine.</p>
     <p>Being a writer for The Teen Magazine offers the experience and mentorship necessary to launch your journalism career.
       Our writers get the opportunity to interview celebrities, report on important world affairs, work with businesses, and have their
       articles read by thousands of readers. You will receive feedback on submitted articles, build your journalism resume, and network with our amazing community
@@ -28,6 +28,6 @@
     <p>When you're ready to start your first article, go to your Dashboard and click on “New Post.” Before submitting
       an article for approval, please read the instructions on “Writing the perfect article” found on your dashboard.</p>
     <p>Please let me know if you have any questions! We look forward to reading your first submitted article!</p>
-    <p>Best Regards,<br/>Sewon Park</p>
+    <p>Best Regards,<br/>Mia Johansson</p>
   </body>
 </html>
