--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -98,7 +98,7 @@
 
   <hr />
   <p>
-    If you're confused about any of this styling, or want to do something specific, you can email Sewon at <b>sewonpark@college.harvard.edu</b>
+    If you're confused about any of this styling, or want to do something specific, you can email Mia at <b>miajohansson@college.harvard.edu</b>
   </p>
 
   <p>Read "<a href="/finding-images">Finding Images</a>" Next →</p>
