--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -2,7 +2,7 @@
   <div class="btn_cntnr" style="margin-bottom: 0px;"><%= link_to "Pitch an Article", new_pitch_path, class: "newpost--new--profile" %></div>
   <h1 class="pitch_ttl"><%= @title %></h1>
   <% if @desc %>
-    <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. You will have two weeks to submit your article for review. If your article is not submitted within two weeks and/or not approved within one month of claiming the topic, the pitch will become unclaimed and any writer can claim it. If another writer claims the pitch during that time, your article will become locked and you will no longer be able to make changes to it.</i>
+    <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. You will have two weeks to submit your article for review. If your article is not submitted within two weeks and/or not approved within one month of claiming the topic, the pitch will become unclaimed and any writer can claim it instead.</i>
     <br>
     <br>
   <% end %>
