bug fixes and confirmation emails for editing flow added

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -306,6 +306,13 @@ footer {
   }
 }
 
+.pagination {
+  em, a, span {
+    padding: 0 10px 20px 0;
+    text-decoration: none;
+  }
+}
+
 ///////////////////////////////////////////////////////////////////////////
 
 .divfeatured {
