--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -36,7 +36,7 @@
             <div class="card-body dashboard-card-3 dashboard-card">
               <a href="<%= analytics_path(user_id: @user.id) %>">
                 <div class="stats_wrapper">
-                  <div class="value sparkley last" id="value3"></div>
+                  <div class="value" id="value3"></div>
                   <div class="text-wrapper">
                     <span>Total</span>
                     <span>Pageviews</span>
