--- a/app/assets/stylesheets/_pages.css.scss
+++ b/app/assets/stylesheets/_pages.css.scss
@@ -138,6 +138,17 @@
   }
 }
 
+#button_nrml {
+  margin: 10px;
+  padding: 0;
+  border: none;
+  text-decoration: underline;
+  color: #65B19D;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 .analytics_wrapper {
   max-width: 100%;
   overflow: auto;
