--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -13,7 +13,7 @@
     <tbody>
       <% @posts.each do |post| %>
         <tr>
-          <td <% if post.post_impressions > 1000 %> style="font-weight: bolder;" <%end %>><%= post.post_impressions %></td>
+          <td><%= post.post_impressions %></td>
           <td><%= post.publish_at.strftime("%D") %></td>
           <td><%= link_to post.title.truncate(40), post, class: "link_nrml" %></td>
           <% @top_percent = ((@posts_by_impressions.index(post).to_f / @posts.count.to_f) * 100).round(1) %>
