--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -29,5 +29,6 @@
       an article for approval, please read the instructions on “Writing the perfect article” found on your dashboard.</p>
     <p>Please let me know if you have any questions! We look forward to reading your first submitted article!</p>
     <p>Best Regards,<br/>Mia Johansson</p>
+    <p>Editor in Chief</p>
   </body>
 </html>
