--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -10,13 +10,13 @@
 
   <div class="pitch_flds">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, placeholder: "Title" %>
 
     <%= f.label :description, "Describe your idea and who the ideal reader would be (3-4 sentences)." %>
-    <%= f.text_area :description %><br><br>
+    <%= f.text_area :description, placeholder: "What's your pitch?" %><br><br>
 
     <%= f.label :requirements, "(Optional) What else should this article have? (ie. length, topics, images, personal trial/review, interviews/research)." %>
-    <%= f.text_area :requirements %>
+    <%= f.text_area :requirements, style: "min-height: 100px;", placeholder: "- requirement..." %>
 
     <div class="margin_flds">
       <%= f.collection_select(:category_id, @categories, :id, :name, {prompt: "Select a Category"}) %>
@@ -26,6 +26,9 @@
       <%= f.label "Upload thumbnail image" %>
       <%= f.file_field :thumbnail %>
     </div>
+
+    <%= f.check_box :assign_if_not_claimed, style: "display: inline;" %>
+    <span>Automatically assign this pitch to a writer if it's not claimed in two weeks.</span><br><br>
 
     <% if @pitch.slug.nil? %>
       <%= f.submit "Share Pitch" %>
