--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -2,8 +2,13 @@
   <div class="btn_cntnr" style="margin-bottom: 0px;"><%= link_to "Pitch an Article", new_pitch_path, class: "newpost--new--profile" %></div>
   <h1 class="pitch_ttl"><%= @title %></h1>
   <% if @desc %>
-    <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. You will have two weeks to submit your article for review. If your article is not submitted within two weeks and/or not approved within one month of claiming the topic, the pitch will become unclaimed and any writer can claim it instead.</i>
-    <br>
+    <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. You will have two weeks to submit your article for review after claiming the pitch.</i>
+    <br><br>
+    <p style="display: inline;">Filter by category</p>
+    <%= form_for @pitch, method: "get" do |f| %>
+      <%= f.collection_select(:category_id, @categories, :id, :name, {include_blank: "All Pitches"}) %>
+      <%= f.submit "Apply filter", method: :index, id: "button_nrml" %>
+    <% end %>
     <br>
   <% end %>
   <div class="flex-wrapper">
@@ -23,4 +28,5 @@
     </a>
     <% end %>
   </div>
+  <%= will_paginate @pitches %>
 </div>
