--- a/app/views/users/onboarding/_your_profile.html.erb
+++ b/app/views/users/onboarding/_your_profile.html.erb
@@ -34,7 +34,7 @@
     <div class="number_wrapper">
       <%= image_tag "1-num.png", class: "img_number" %><%= f.label "Upload a profile picture" %><br><br />
     </div>
-    <%= f.file_field :profile, :class => "add_margin_left" %><br/><br/>
+    <%= f.file_field :profile, :class => "add_margin_left" %><br/><br>
 
     <div class="number_wrapper">
       <%= image_tag "2-num.png", class: "img_number" %><%= f.label "Description" %><br><br />
@@ -79,10 +79,12 @@
       </div>
 
     </div>
+    <br>
+    <%= f.check_box :bi_monthly_assignment %>
+    <%= f.label "I want to be assigned articles per month" %>
+    <i><br>If you opt-in to bi-weekly articles, we will send you two article assignments per month after your first article is published. You may opt-out at any time.</i>
 
-    <p>You may opt out of a profile picture if you do not upload an image.
-      *Note: this is not recommended</p>
-
+    <br><i>You may opt-out of a profile picture if you do not upload an image.</i><br>
     <% @full = @user.first_name + " " + @user.last_name %>
     <%= f.hidden_field :full_name, :value => @full %>
     <%= f.hidden_field :posts_count, :value => @user.posts.published.count %>
