--- a/app/views/pages/images.html.erb
+++ b/app/views/pages/images.html.erb
@@ -3,8 +3,9 @@
   <%= image_tag("11.png") %>
 
   <ul>
-    <li>Sites with the best lifestyle images are <a target="_blank" href="https://www.pinterest.com">Pinterest.com</a>, <a target="_blank" href="http://favim.com/">Favim.com</a>, and <a target="_blank" href="http://weheartit.com/">WeHeartIt.com</a>. Only use images that have 5,000+ shares.</li>
+    <li>Sites with the best lifestyle images are <a target="_blank" href="https://www.pinterest.com">Pinterest.com</a>, <a target="_blank" href="http://favim.com/">Favim.com</a>, and <a target="_blank" href="http://weheartit.com/">WeHeartIt.com</a>. Only use images that have lots of shares.</li>
     <li>Do not use images that have watermarks or copyright seals. Google search is not a safe way to find images.</li>
+    <li>Some great royalty free, high-quality image websites are <a target="_blank" href="https://www.pexels.com/">Pexels.com</a>, <a target="_blank" href="https://unsplash.com/">Unsplash.com</a>, <a target="_blank" href="https://creativecommons.org/">Creative Commons</a>, and <a target="_blank" href="Favim.com">Favim.com</a>.</li>
     <li>You may use GIF's and please do. They make articles more interesting and interactive. You can search for gifs on google and insert them just like you would for an image. A good site to find gifs on is <a target="_blank" href="http://giphy.com/">Giphy.com</a></li>
     <li>All images need to be good quality and not grainy. </li>
     <li>The image you choose for your thumbnail needs to be high resolution quality.</li>
