--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -5,13 +5,14 @@
   </p>
   <p>Articles should be formatted so that they can be skimmmed over and be understandable. This means that your article should follow these basic requirements:</p>
   <ol>
+    <li>Article topics should be relevant/useful and include a perspective *unique* to you.</li>
+    <li>Articles should be conversational with good grammar and easy-to-read formatting.</li>
     <li>No paragraphs should be more than four lines on desktop. </li>
-    <li>Limit the use of "I" and "my".</li>
     <li>Articles should have at least one image, preferably more.</li>
     <li>Articles should be split up into multple sections with headers. Avoid one worded headers if you can. Be creative!</li>
   </ol>
 
-  <p>Additionally, articles should be at minimum 300 words. Shorter articles should also have lots of images.</p>
+  <p>Additionally, articles should be at minimum 1000 words. Shorter articles should also have lots of images.</p>
 
   <h3>Articles Should Follow This Structure:</h3>
   <p>
@@ -28,7 +29,7 @@
   </p>
   <%= image_tag("2.png", :class=>"image")%>
   <p>
-    - <b>Paragraphs:</b> Paragraphs should never be more than four lines, and should be split up wherever possible. A concluding paragraph is not necessary.
+    - <b>Paragraphs:</b> Paragraphs should not be more than four lines, and should be split up wherever possible. A concluding sentence to reiterate your most actionable piece of advice. A concluding paragraph is not necessary in all articles.
   </p>
   <%= image_tag("3.png", :class=>"image")%>
 
