--- a/app/assets/stylesheets/_pages.css.scss
+++ b/app/assets/stylesheets/_pages.css.scss
@@ -17,12 +17,6 @@
     color: #65B19D;
     font-size: 25px;
   }
-  a {
-    color: black;
-    &:hover {
-      opacity: 0.5;
-    }
-  }
 }
 
 .topics {
@@ -46,12 +40,6 @@
     .blank {
       color: #D3D3D3;
       display: inline-block;
-    }
-  }
-  a {
-    color: black;
-    &:hover {
-      opacity: 0.5;
     }
   }
 
@@ -106,21 +94,18 @@
       margin-top: 10px;
     }
   }
+}
+
+.theimages, .criteria, .privacy, .topics, .writing {
   a {
-    color: black;
+    color: #65B19D;
     &:hover {
-      opacity: 0.5;
+      background-color: yellow;
+      opacity: 1;
     }
   }
 }
-
 .theimages {
-  a {
-    color: black;
-    &:hover {
-      opacity: 0.5;
-    }
-  }
   img {
     width: 70%;
     display: block;
