--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -1,21 +1,14 @@
 <div class="skinny_wrapper criteria">
   <h1 id="page_title">Criteria & FAQ</h1>
-  <p class="question">
-    What do the symbols next to my posts mean?</p>
-    <span><%= image_tag "saved.png", class: "icon" %> <p class='p--nextto'>Your article is saved, and you're the only one who can see it and can edit it. It has not been submitted for approval yet.</p></span>
-    <span><%= image_tag "waiting.png", class: "icon" %><p class='p--nextto'>You've submitted your finished article for review and it's waiting for an administer to approve it.</p></span>
-    <span><%= image_tag "approved.png", class: "icon" %><p class='p--nextto'>Your article is approved and is now waiting to be published.</p></span>
-    <span><%= image_tag "published.png", class: "icon" %><p class='p--nextto'>Your article is published and is live on The Teen Magazine.</p></span>
-  <br />
 
-  <p class="question">How long does it take for an article to be approved? </p>
+  <p class="question">How long does it take for an article to be reviewed? </p>
   <p>It depends on the article. If there are very few mistakes it can take anywhere from a few hours to a couple of days. If the article needs to be corrected by the editor or needs bigger changes, it can take up to five days to be either returned or published.</p>
 
   <p class="question">How long does it take for an article to be published? </p>
   <p>Usually when an article has been approved, it'll be published right away. Sometimes, however, it will be delayed by a few days if there have been many recently published articles.</p>
 
   <p class="question">How long should my article be? </p>
-  <p>The perfect article length is around 500+ words. Shorter articles are okay too if they are filled with lots of images/gifs. </p>
+  <p>The perfect article length is around 1200 - 2000 words. Slightly shorter articles are okay if they are filled with lots of images/gifs. </p>
 
   <p class="question">What does a published article consist of? </p>
   <p style="margin-bottom: 0;">A published article...
@@ -27,7 +20,7 @@
          has at least one image
       </li>
       <li>
-         is broken up into multiple paragraphs that aren't more than four lines each
+         is broken up into multiple paragraphs to make it easy to read
       </li>
       <li>
          has multiple relevant headers
@@ -39,36 +32,37 @@
   </p>
 
   <p class="question">How often should I submit an article?</p>
-  <p>Preferably, you should be uploading articles at least once every two weeks so that our site can stay active, but there are no official deadlines. However, if you can fit it into your schedule, we would love for you to write as many articles as you can.</p>
-
+  <p>Preferably, you should be uploading articles at least once every two weeks so that our site can stay active. You can opt-in to bi-weekly article
+    assignments your <%= link_to edit_user_path("edit profile page", current_user) %>. There is no limit to how many articles you can submit per month, and we would love for you to write as many articles as you have time for.</p>
 
   <p class="question">How do I include images? </p>
-  <p>  Please visit <a href="/writing-the-perfect-article">Writing The Perfect Article</a></p>
-
+  <p> Please visit <a href="/writing-the-perfect-article">Writing The Perfect Article</a></p>
 
   <p class="question">What should I write about? </p>
-  <p>Please Visit <a href="/choosing-a-topic">Choosing A Topic</a>.</p>
+  <p>Please Visit <a href="/choosing-a-topic">Choosing A Topic</a> or claim a pitch from <%= link_to("Editor Pitches", pitches_path) %>.</p>
 
-  <p class="question">What if I Want To Write Something That Doesn't Fit a Category? </p>
-  <p>Most likely this is okay. To be safe you should email Mia at miajohansson@college.harvard.edu to confirm your idea. If it's about something that most teenage girls would find interesting, then it'll most likely be a good idea.</p>
-
-  <p class="question">Can I write product reviews?</p>
-  <p>Yes, but we limit these articles to only one for every three articles you write. Additionally, any review you write needs to be genuine and well thought out.</p>
-
-  <p class="question">Can I include affiliate links?</p>
-  <p>  Yes, but we limit these to 5 for every three articles you write. You could include all five in one article, or spread them out between the three. Affiliate links also need to be woven into your article. For example, you might say: "This <a href="https://www.amazon.com/Moroccanoil-Luminous-Hairspray-Strong-Ounce/dp/B007B3T47Y/ref=sr_1_cc_5_a_it?s=aps&ie=UTF8&qid=1487554070&sr=1-5-catcorr&keywords=hairspray+for+hair">hairspray</a> is a must have because..." instead of "<a href="https://www.amazon.com/Moroccanoil-Luminous-Hairspray-Strong-Ounce/dp/B007B3T47Y/ref=sr_1_cc_5_a_it?s=aps&ie=UTF8&qid=1487554070&sr=1-5-catcorr&keywords=hairspray+for+hair">Buy this hairspray</a>".</p>
+  <p class="question">What if I want to write something that doesn't fit a category? </p>
+  <p>If your article idea doesn't fit a category, it might not be right for The Teen Magazine, but you can reach out to any one of the editors through the Facebook group to ask about your idea.</p>
 
   <p class="question">What if I have a friend that wants to write for The Teen Magazine?</p>
-  <p>  That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/apply">www.theteenmagazine.com/apply</a>. We will then review your friend's application and send her an email with her account if she's accepted.</p>
+  <p>That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/apply">www.theteenmagazine.com/apply</a>. We will then review your friend's application and send her an email with her account if she's accepted.</p>
+
+  <p class="question">How can I pitch an article idea? </p>
+  <p>Right now, only editors can pitch article topics.</p>
 
   <p class="question">How can I become an editor?</p>
-  <p>Reach out to Mia at miajohansson@college.harvard.edu with an inquiry.</p>
+  <p>Email miajohansson@college.harvard.edu.</p>
 
   <p class="question">How can I change my password? </p>
   <p>You can change your password  <a target="_blank" href="/users/edit">here</a>.</p>
 
+  <p class="question">I have someone I want to interview. How do I reach out to them, and ask for an interview?</p>
+  <p>Right now, there's no formal process. All the interviews we've done have been through influencers' managers reaching out to us, but often if you can find their email (usually found through social media accounts)
+    or contact form on their website, they're very receptive to scheduling an interview. Make sure to include that you're a writer for The Teen Magazine and your reason for wanting to interview them for an article. Often you
+    can ask the influencer to share your article once it has been published.</p>
+
   <p class="question">Have a question that wasn't answered here?</p>
-  <p>  Email Mia at miajohansson@college.harvard.edu. She is willing to help with anything you might have a question about.</p>
+  <p>Email Mia at miajohansson@college.harvard.edu or message one of the editors in the <a href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
 
   <p>Read "<a href="/choosing-a-topic">Choosing A Topic</a>" Next →</p>
 </div>
