tiny css change because I'm a perfectionist

--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -55,7 +55,7 @@
   .stats_wrapper {
     margin: 0 auto;
     width: fit-content;
-    text-align: center;
+    text-align: left;
     .value {
       font-size: 80px;
       color: white;
