--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -238,6 +238,7 @@
   margin-bottom: -20px;
   margin: 0;
   text-decoration: none;
+  font-size: 20px;
 }
 
 @media (min-width: 640px) and (max-width: 800px) {
