--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -11,12 +11,12 @@
       </tr>
     </thead>
     <tbody>
-      <% @posts.each do |post| %>
+      <% @user_posts.each do |post| %>
         <tr>
           <td><%= post.post_impressions %></td>
           <td><%= post.publish_at.strftime("%D") %></td>
           <td><%= link_to post.title.truncate(40), post, class: "link_nrml" %></td>
-          <% @top_percent = ((@posts_by_impressions.index(post).to_f / @posts.count.to_f) * 100).round(1) %>
+          <% @top_percent = ((@posts_by_impressions.index(post).to_f / @posts_by_impressions.count.to_f) * 100).round(1) %>
           <% @top_percent = (@top_percent < 0.1 ) ? "< 0.1" : @top_percent %>
           <td <% if !(@top_percent.class.eql? String) %><% if (@top_percent < 25) %> style= "font-weight: bolder;" <% end %><% else %>style= "font-weight: bolder;"<% end %>><%= @top_percent %>%</td>
           <% @category = Category.find(post.category_id) %>
