added writer reviews to apply form

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -20,7 +20,14 @@ pintrk('track', 'pagevisit');
   <li>Learn from and network with our talented writer community</li>
   <li>Apply for other positions and internships within The Teen Magazine</li>
 </ul>
-  <p>We can’t wait to read your submission and welcome you to the team!</p>
+<h4>What our writers say about The Teen Magazine</h4>
+<p><i>“The Teen Magazine is one of the most open platforms I've come across for aspiring writers and those who'd like to get an experience of what it's like to work in the journalism world. When I joined, I faced such a warm welcome from everyone and got the help I needed when I published my first article. I went from having to get help with my word choice and attaching images to being able to create an article and have it directly approved for publishing.”</i></p>
+<p><i>“I was limited to creating articles for my school's publication that sadly didn't get the success and recognition it actually deserved, pitching articles to websites without getting any response, and blogging regularly with no traffic. I really needed a place that can help publicize my work to a larger audience and help me improve and give me the constructive criticism I needed to achieve said improvement, and The Teen Magazine has provided all of that for me.”</i></p>
+<p><i>"When I became a writer for The Teen Magazine, I was just hoping for a simple activity. However, over the course of my experience here, it has become way more than that. To be able to have a role in the Entertainment industry and write articles that appear first on Google is amazing. I've gotten to meet and collaborate with young women all over the world and learn about their experiences and opinions. I would never change my experience at The Teen Magazine."</i></p>
+
+  <p>We hope you apply to our team, and we can’t wait to read your submission!</p>
+  <h2>Apply to the TTM Writer Team</h2>
+
   <%= form_for @application do |f| %>
     <span>First Name</span>
     <%= f.text_field :first_name, required: true %>
@@ -30,13 +37,7 @@ pintrk('track', 'pagevisit');
     <br />
     <span>Email</span>
     <%= f.email_field :email, required: true %>
-    <br />
-    <span>Primary Category</span><br /><br />
-    <%= f.select :category, ['Academics', 'Beauty', 'DIY', 'Entertainment', 'Fashion', 'Get Involved', 'Health & Fitness', 'Lifestyle', 'News', 'Tips & Hacks']%><br />
-    <br />
-    <br />
-    <p>Please write a one-page cover letter introducing yourself and describing why you would be a good fit for The Teen Magazine. Please include links to any previously published work/blog(s) if applicable.
-    </p>
+    <p style="margin-top: 0px;">Please write one to two paragraphs introducing yourself and describing why you would be a good fit for The Teen Magazine writer team. Please include links to any previously published work/blog(s) if applicable.</p>
     <%= f.text_area :description, required: true %>
     <br />
     <div class="hidden">
