bug fix pitch update

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -6,7 +6,7 @@ pintrk('track', 'pagevisit');
 <div id="apply_image">
 </div>
 <div class="apply_wrapper">
-  <h2>Join the TTM Writer Fam!</h2>
+  <h2>Join the TTM Writer Team!</h2>
   <p>We are a close-knit group of young college and high school writers who work closely with one another to improve journalism skills,
     gain writing experience, and receive quality feedback from top-tier student journalists. We hope you join our team!</p>
 <h2>What will you gain from being a writer for The Teen Magazine?</h2>
