--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -19,13 +19,13 @@
     <div class="sidebar_menu hide_menu" style="background-color: #65B19D;">
       <i class="fa fa-times"></i>
       <h1><%= link_to "The Teen Magazine", root_path %></h1>
-      <a href="/categories/get-involved">Get Involved</a>
-      <a href="/categories/academics">Academics</a>
-      <a href="/categories/health-fitness">Health</a>
-      <a href="/categories/beauty">Beauty</a>
-      <a href="/categories/fashion">Fashion</a>
-      <a href="/categories/entertainment">Entertainment</a>
-      <a href="/categories/personal-stories">Personal Stories</a>
+      <a href="/categories/student-life">Student Life</a>
+      <a href="/categories/wellness">Wellness</a>
+      <a href="/categories/beauty-style">Beauty & Style</a>
+      <a href="/categories/culture">Culture</a>
+      <a href="/categories/relationships">Relationships</a>
+      <a href="/categories/lifestyle">Lifestyle</a>
+      <a href="/categories/opinion">Opinion</a>
       <a href="/contacts/new">Contact</a>
       <% if user_signed_in? %>
          <%= link_to "Create", pitches_path %>
